typescript/checker/tests/conformance/parser/ecmascript5/Expressions/parserUnaryExpression1.ts.stderr
error: Cannot assign to this
 --> $DIR/tests/conformance/parser/ecmascript5/Expressions/parserUnaryExpression1.ts:1:3
  |
1 | ++this;
  |   ^^^^

